Add undo/redo functionality

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <h1 aria-label="Klondike Solitaire">Solitaire</h1>
     <nav class="toolbar" aria-label="Game toolbar">
       <button id="newGame" class="btn" aria-label="Start a new game">New</button>
-      <button style="display:none;" id="undo" class="btn" aria-label="Undo last move">Undo</button>
-      <button style="display:none;" id="redo" class="btn" aria-label="Redo last undone move">Redo</button>
+      <button id="undo" class="btn" aria-label="Undo last move">Undo</button>
+      <button id="redo" class="btn" aria-label="Redo last undone move">Redo</button>
       <button id="hint" class="btn" aria-label="Show a hint">Hint</button>
       <button style="display:none;" id="auto" class="btn" aria-label="Auto-complete when safe">Auto</button>
 	  
