feat: add auto-complete option

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <button id="undo" class="btn" aria-label="Undo last move">Undo</button>
       <button id="redo" class="btn" aria-label="Redo last undone move">Redo</button>
       <button id="hint" class="btn" aria-label="Show a hint">Hint</button>
-      <button style="display:none;" id="auto" class="btn" aria-label="Auto-complete when safe">Auto</button>
+      <button id="auto" class="btn" aria-label="Auto-complete when safe">Auto</button>
 	  
       <details id="opts" class="opts">
         <summary class="btn" aria-controls="opts-panel" aria-expanded="false">Options</summary>
