--- a/index.html
+++ b/index.html
@@ -225,6 +225,8 @@
     <script src="js/model.js"></script>
     <script src="js/emitter.js"></script>
     <script src="js/engine.js"></script>
+    <!-- Deterministic solver for dead-end detection -->
+    <script src="js/solver.js"></script>
     <script src="js/ui.js"></script>
     <script src="js/main.js"></script>
   </body>
