feat: add local stats module and UI

--- a/index.html
+++ b/index.html
@@ -222,6 +222,8 @@
       crossorigin="anonymous"
     ></script>
     <script src="js/store.js"></script>
+    <script src="js/stats.js"></script>
+    <script src="js/stats-ui.js"></script>
     <script src="js/model.js"></script>
     <script src="js/emitter.js"></script>
     <script src="js/engine.js"></script>
