Add NL, ES, DE translations and stats i18n test

--- a/index.html
+++ b/index.html
@@ -228,6 +228,9 @@
             <select id="languageSelect" data-i18n-attr="aria-label:options.language">
               <option value="en" data-i18n="language.english"></option>
               <option value="fr" data-i18n="language.french"></option>
+              <option value="nl" data-i18n="language.dutch"></option>
+              <option value="es" data-i18n="language.spanish"></option>
+              <option value="de" data-i18n="language.german"></option>
             </select>
           </div>
         </div>
